<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:orientation="vertical"
        android:background="@color/Purple" >

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/activity15_viewpager" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity15_txtview_close"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/free_trial_no_thanks"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/activity15_viewpager_dots_holder"
            android:layout_alignBottom="@+id/activity15_viewpager"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity15_txtview_title"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/free_trial_title"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity15_txtview_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/free_trial_content"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:gravity="center" />

    <Button
        style="@style/free_trial_button_with_icon"
        android:layout_width="280dp"
        android:id="@+id/activity15_btn_via_facebook"
        android:layout_marginTop="30dp"
        android:text="@string/free_trial_facebook_button"
        android:background="@color/facebook_blue"
        android:drawableLeft="@drawable/facebook_icon_white"
        android:paddingLeft="80dp" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <Button
            style="@style/free_trial_button_with_icon"
            android:layout_width="130dp"
            android:id="@+id/activity15_btn_via_email"
            android:layout_alignParentLeft="true"
            android:text="@string/free_trial_email_button"
            android:textColor="@android:color/white"
            android:background="@color/sky_blue"
            android:drawableLeft="@drawable/invite_via_email"
            android:paddingLeft= "25dp" />
        <Button
            style="@style/free_trial_button_with_icon"
            android:layout_width="130dp"
            android:id="@+id/activity15_btn_via_txtmsg"
            android:layout_alignParentRight="true"
            android:text="@string/free_trial_message_button"
            android:textColor="@android:color/white"
            android:background="@color/sky_blue"
            android:drawableLeft="@drawable/invite_via_txtmsg"
            android:paddingLeft= "12dp" />


    </RelativeLayout>




</LinearLayout>